Funcionalidad con Three JS
Se agregó toda la lógica para que después de obtener la superficie envolvente, se cargue el modelo en 3D en un canvas usando la librería de THREE js. Ahora necesariamente se guaran los mesh y los archivos.js en el lado del servidor en la carpeta static debido a que flask es así como despacha archivos estáticos.

--- a/templates/archivo-procesado.html
+++ b/templates/archivo-procesado.html
@@ -3,4 +3,16 @@
 {% block content %}
   <h1>Se procesó el archivo: {{file_name}}</h1>
   <a href="/descargar-archivo" class="btn btn-primary">Descargar</a>
+  
+  <!-- canvas que nos sirve para hacer render del objeto-->
+  <canvas id="myCanvas"></canvas>
+
+  <!-- pasamos la URL del modelo hecho mesh como una vairable global -->
+  <script>
+    window.meshUrl = "{{ mesh_url }}";
+  </script>
+
+  <!-- cargamos el script the java script-->
+  <script src="{{ url_for('static', filename='scripts/render-mesh.js') }}"></script>
+
 {% endblock %}
