Ver modelo y malla

--- a/templates/archivo-procesado.html
+++ b/templates/archivo-procesado.html
@@ -1,18 +1,18 @@
 {% extends "index.html" %}
 
 {% block content %}
-  <h1>Se procesó el archivo: {{file_name}}</h1>
-  <a href="/descargar-archivo" class="btn btn-primary">Descargar</a>
+<canvas id="canvas-object" class="mt-4"></canvas>
+<canvas id="canvas-mesh" class="mt-4"></canvas>
+<a href="/descargar-archivo" class="btn btn-primary boton-descargar">Descargar</a>
   
-  <!-- canvas que nos sirve para hacer render del objeto-->
-  <canvas id="myCanvas"></canvas>
-
   <!-- pasamos la URL del modelo hecho mesh como una vairable global -->
   <script>
+    window.objectUrl= "{{object_url}}"
     window.meshUrl = "{{ mesh_url }}";
   </script>
 
   <!-- cargamos el script the java script-->
+  <script src="{{ url_for('static', filename='scripts/render-object.js') }}"></script>
   <script src="{{ url_for('static', filename='scripts/render-mesh.js') }}"></script>
 
 {% endblock %}
