--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,11 @@
       align-items: center;
       justify-content: center;
     }
+    .boton-descargar{
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+    }
   </style>
 </head>
 <body>
