Voxelizar y extraer superficie envolvente

--- a/templates/archivo-procesado.html
+++ b/templates/archivo-procesado.html
@@ -1,8 +1,8 @@
 {% extends "index.html" %}
 
 {% block content %}
-<canvas id="canvas-object" class="mt-4"></canvas>
-<canvas id="canvas-mesh" class="mt-4"></canvas>
+<canvas id="canvas-object"></canvas>
+<canvas id="canvas-mesh"></canvas>
 <a href="/descargar-archivo" class="btn btn-primary boton-descargar">Descargar</a>
   
   <!-- pasamos la URL del modelo hecho mesh como una vairable global -->
