--- a/templates/solicitar-archivo.html
+++ b/templates/solicitar-archivo.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 
 {% block content %}
-  <div class="row">
+  <div class="row mt-5">
     <div class="col-12 center-content">
       <h1>Extraer la superficie envolvente de modelos tridimensionales</h1>
     </div>
