--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.124.0/examples/js/loaders/OBJLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.124.0/examples/js/controls/OrbitControls.js"></script>
   <style>
+    body{
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
     .center-content{
       display: flex;
       align-items: center;
@@ -25,7 +30,7 @@
   </style>
 </head>
 <body>
-  <div class="container-fluid mt-5">
+  <div class="container-fluid">
     {% block content %}{% endblock %}
   </div>
 </body>
