Código para convertir de voxeles a una matriz de texto que se puede usar en el programa de blender del profe

--- a/templates/archivo-procesado.html
+++ b/templates/archivo-procesado.html
@@ -3,7 +3,8 @@
 {% block content %}
 <canvas id="canvas-object"></canvas>
 <canvas id="canvas-mesh"></canvas>
-<a href="/descargar-archivo" class="btn btn-primary boton-descargar">Descargar</a>
+<span class="info-modelo" id="conteo-obj">{{mesh_count}} voxeles</span>
+<span class="info-modelo" id="conteo-mesh">{{mesh_count}} voxeles</span>
   
   <!-- pasamos la URL del modelo hecho mesh como una vairable global -->
   <script>
