--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,18 @@
       bottom: 20px;
       right: 20px;
     }
+    .info-modelo{
+      position: fixed;
+      color: white;
+    }
+    #conteo-mesh{
+      bottom: 20px;
+      right: 20px;
+    }
+    #conteo-obj{
+      bottom: 20px;
+      right: calc(50% - 20px);
+    }
   </style>
 </head>
 <body>
