Conteo de los voxeles correcto y función para exportar a texto

--- a/templates/archivo-procesado.html
+++ b/templates/archivo-procesado.html
@@ -3,7 +3,7 @@
 {% block content %}
 <canvas id="canvas-object"></canvas>
 <canvas id="canvas-mesh"></canvas>
-<span class="info-modelo" id="conteo-obj">{{mesh_count}} voxeles</span>
+<span class="info-modelo" id="conteo-obj">{{obj_count}} voxeles</span>
 <span class="info-modelo" id="conteo-mesh">{{mesh_count}} voxeles</span>
   
   <!-- pasamos la URL del modelo hecho mesh como una vairable global -->
