Procesar los archivos de forma correcta y botón de descarga
Falta implementar la descarga de archivos?

--- a/templates/error-archivo.html
+++ b/templates/error-archivo.html
@@ -1,5 +1,7 @@
 {% extends "index.html" %}
 
 {% block content %}
+<div class="d-flex align-items-center justify-content-center">
   <h1>Hubo un error al procesar el archivo :(</h1>
+</div>
 {% endblock %}
