--- a/templates/archivo-procesado.html
+++ b/templates/archivo-procesado.html
@@ -1,11 +1,11 @@
 {% extends "index.html" %}
 
 {% block content %}
-<canvas id="canvas-object"></canvas>
-<canvas id="canvas-mesh"></canvas>
-<span class="info-modelo" id="conteo-obj">{{obj_count}} voxeles</span>
-<span class="info-modelo" id="conteo-mesh">{{mesh_count}} voxeles</span>
-  
+  <canvas id="canvas-object"></canvas>
+  <canvas id="canvas-mesh"></canvas>
+  <span class="info-modelo" id="conteo-obj">{{obj_count}} voxeles</span>
+  <span class="info-modelo" id="conteo-mesh">{{mesh_count}} voxeles</span>
+  <a href="/descargar-archivo" class="btn btn-primary boton-descargar">Descargar Archivos</a>
   <!-- pasamos la URL del modelo hecho mesh como una vairable global -->
   <script>
     window.objectUrl= "{{object_url}}"
