--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     }
     .boton-descargar{
       position: fixed;
-      bottom: 20px;
+      top: 20px;
       right: 20px;
     }
     .info-modelo{
