--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,14 @@
       bottom: 20px;
       right: calc(50% - 20px);
     }
+    #titulo-obj{
+      top: 20px;
+      left: 20px;
+    }
+    #titulo-mesh{
+      top: 20px;
+      left: calc(50% + 20px);
+    }
   </style>
 </head>
 <body>
