Quitar todas las caras internas y el conteo de caras

--- a/templates/archivo-procesado.html
+++ b/templates/archivo-procesado.html
@@ -3,10 +3,10 @@
 {% block content %}
   <canvas id="canvas-object"></canvas>
   <canvas id="canvas-mesh"></canvas>
-  <h2 class="info-modelo" id="titulo-obj">Objeto sólido</h2>
+  <h2 class="info-modelo" id="titulo-obj">Objeto Voxelizado</h2>
   <h2 class="info-modelo" id="titulo-mesh">Superficie envolvente</h2>
-  <span class="info-modelo" id="conteo-obj">{{obj_count}} voxeles</span>
-  <span class="info-modelo" id="conteo-mesh">{{mesh_count}} voxeles</span>
+  <span class="info-modelo" id="conteo-obj">{{obj_count}} caras</span>
+  <span class="info-modelo" id="conteo-mesh">{{mesh_count}} caras</span>
   <a href="/descargar-archivo" class="btn btn-primary boton-descargar">Descargar Archivos</a>
   <!-- pasamos la URL del modelo hecho mesh como una vairable global -->
   <script>
