Features: - Soporte para archivos PLY - Mejor lógica para descargar - Escala de los modelos en threejs - Modelos PLY de stanford

--- a/templates/solicitar-archivo.html
+++ b/templates/solicitar-archivo.html
@@ -11,7 +11,7 @@
           <div class="col-12">
             <div>
               <label for="archivo" class="form-label">Archivo</label>
-              <input type="file" accept=".obj" class="form-control" name="archivo">
+              <input type="file" accept=".obj,.ply" class="form-control" name="archivo">
             </div>
           </div>
           <div class="col-12 center-content mt-5">
