--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
   <!-- three JS scripts-->
   <script src="https://cdn.jsdelivr.net/npm/three@0.124.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.124.0/examples/js/loaders/OBJLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.124.0/examples/js/loaders/PLYLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.124.0/examples/js/controls/OrbitControls.js"></script>
   <style>
     body{
